update root route, customize index view and layouts, add navbar, start tests

--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,6 +1,11 @@
-<h1>Listing bookmarks</h1>
+<header>
+  <title>Bookmarkz</title>
+</header>
 
-<table>
+
+<h1>My bookmarks</h1>
+
+<table id="bookmarks">
   <thead>
     <tr>
       <th>Url</th>
